add login/register ui and hit to api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "strict": true,
+    // "target": "ESNext",
+    // "useDefineForClassFields": true,
+    // "module": "ESNext",
+    // "moduleResolution": "Node",
+    // "strict": true,
     "jsx": "preserve",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "esModuleInterop": true,
+    // "resolveJsonModule": true,
+    // "isolatedModules": true,
+    // "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
     "noEmit": true,
-    // "types": [
-    //   "node"
-    // ],
+    "noImplicitAny": true,
+    // "allowJs": false,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+        "@/*" : ["src/*"]
+    },
+    "types": [
+      "node"
+    ]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
