--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SERVICE_ENDPOINT=https://dummyapi.io/data/v1/
-VITE_APP_ID_DUMMYAPI=0JyYiOQXQQr5H9OEn21312
+VITE_SERVICE_ENDPOINT=https://apingweb.com/api/
+# VITE_APP_ID_DUMMYAPI=0JyYiOQXQQr5H9OEn21312
