--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^3.3.0-beta.4",
     "axios": "^1.2.2",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
@@ -17,7 +18,11 @@
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
+    "vfonts": "^0.0.3",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
   }
